--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "^18",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "5.0.0-rc.2"
   },
   "devDependencies": {
     "@eslint/compat": "^1.1.1",
